@@ -3,6 +3,7 @@ Development version (next version)
 - Applied clang-format code style formatting
 - Added tuned parameters for many devices (see doc/tuning.md)
 - Enabled parallel kernel compilation for faster kernel tuning (see doc/tuning.md)
+- Fixed 1 compilation warning in tests from test/wrapper_cblas.hpp
 
 Version 1.6.3
 - Fixed a bug in the GEMMK=1 kernel (with 2D register tiling) when MWG!=NWG
